# conan_deploy_test

./: .gitignore  README.md  run.sh  run_without_deployer.sh
my_app/: CMakeLists.txt  conanfile.txt
my_app/src/: app.cpp
my_lib/: CMakeLists.txt  conanfile.py
my_lib/include/my_lib/: my_lib.hpp
my_lib/src/: my_lib.cpp
